--- a/项目说明文档.md
+++ b/项目说明文档.md
@@ -163,6 +163,12 @@ graph TB
     D -.控制.-> B
 ```
 
+> ![image-20251229204136971](/Users/lalala/Library/Application Support/typora-user-images/image-20251229204136971.png)
+>
+> **【图片 A-1】**: 课程建议 MQTT 部署网络结构对照
+>
+> **说明**: 显示 Mosquitto 服务成功启动，监听在 1883 端口，加载 ACL 文件成功的日志输出
+
 ### 2.2 技术栈
 
 系统采用多种成熟的开源技术构建，技术选型兼顾性能、稳定性和易用性：
@@ -668,28 +674,6 @@ Gateway Proxy 作为数据网关，负责：
 3. **数据去重**：基于时间窗口的去重机制
 4. **数据转发**：转发到标准主题
 
-```mermaid
-flowchart TD
-    Start[接收 MQTT 消息] --> Parse{JSON<br/>解析成功?}
-    Parse -->|否| Log1[记录错误日志]
-    Parse -->|是| Validate{验证字段<br/>ts, value}
-    Validate -->|失败| Log2[记录验证失败]
-    Validate -->|通过| TimeCheck{时间格式<br/>ISO8601?}
-    TimeCheck -->|无效| Log3[记录时间错误]
-    TimeCheck -->|有效| Metric{Metric类型<br/>白名单?}
-    Metric -->|不在白名单| Log4[记录未知类型]
-    Metric -->|有效| Clean[数据清洗<br/>处理null值]
-    Clean --> Dedup{去重检查<br/>时间窗口}
-    Dedup -->|重复| Log5[记录重复数据]
-    Dedup -->|新数据| Forward[转发到 env/*]
-    Forward --> End[完成]
-    Log1 --> End
-    Log2 --> End
-    Log3 --> End
-    Log4 --> End
-    Log5 --> End
-```
-
 ### 3.4 ACL 权限控制
 
 #### 3.4.1 用户角色设计
@@ -1175,14 +1159,14 @@ pause_event.set()  # 默认为运行状态
 
 ```mermaid
 stateDiagram-v2
-    [] --> 运行中
+    [*] --> 运行中
     运行中 --> 暂停: 输入 pause
     暂停 --> 运行中: 输入 resume
     运行中 --> 调速: 输入 rate N
     调速 --> 运行中: 速率已更新
     运行中 --> 停止: 输入 stop
     暂停 --> 停止: 输入 stop
-    停止 --> []: 程序退出
+    停止 --> [*]: 程序退出
 ```
 
 ### 4.5 使用说明
